# pyreportsgen

./: .gitignore  pyproject.toml
scripts/: setup_python_env.sh
src/: __init__.py
src/pyrepgen/: __main__.py  formatter.py  plot_manager.py
tests/yaml/: config.yaml
